--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,10 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>cs6240</groupId>
-  <artifactId>twitter-follower</artifactId>
+  <artifactId>group31</artifactId>
   <packaging>jar</packaging>
   <version>1.0</version>
-  <name>mr-twitter</name>
+  <name>group31</name>
   <properties>
     <encoding>UTF-8</encoding>
     <maven.compiler.source>1.8</maven.compiler.source>
