--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,56 @@
-input/
-output/
+#IntelliJ Files
+*.idea
+*.iml
+
+#Eclipse Files
+*.classpath
+*.project
+
+# Compiled class file
+*.class
+
+# Log file
+*.log
+
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+
+# IntelliJ files
+*.iml
+*.idea
+*.class
+
+# Java Docs
+*.html
+*.css
+*.js
+
+# .swp files
+*.swp
+
+# output folders
+*/output/*
+
+# input folders
+*/input/*
+
+# target folders
+*/target/*
+
+# Makefiles (final Makefile should be submitted with project)
 Makefile
