--- a/sparkClassification/SparkClassification/pom.xml
+++ b/sparkClassification/SparkClassification/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>project</groupId>
   <artifactId>SparkClassification</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>1.0</version>
   <packaging>jar</packaging>
 
   <name>SparkClassification</name>
