--- a/.gitignore
+++ b/.gitignore
@@ -54,14 +54,8 @@ hs_err_pid*
 # target folders
 */target/*
 
-# Makefiles (final Makefile should be submitted with project)
-Makefile
-
 # Misc
-logs*
-output_*
-aws_output*
-thetaJoins/aws_output_2662482_flights.csv
+logs_aws*
 thetaJoins/inputfile
 thetaJoins/output/FinalOutput
 thetaJoins/output/.part-r-00000.crc
